deploy/overlays/production/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bistrot-tatina-front
  namespace: bistrot-tatina
spec:
  type: ClusterIP
  selector:
    app: bistrot-tatina-front
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
