deploy/overlays/production/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bistrot-tatina-front
  namespace: bistrot-tatina
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-force-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bistrot-tatina.server.dylanbattig.fr
      secretName: bistrot-tatina-front-tls
  rules:
    - host: bistrot-tatina.server.dylanbattig.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bistrot-tatina-front
                port:
                  name: http
